[gd_scene load_steps=3 format=3 uid="uid://c4x8k1nr1nq2u"]

[ext_resource type="Script" path="res://components/action_button/ActionButton.gd" id="1_f442w"]
[ext_resource type="Script" path="res://addons/ActionIcon/ActionIcon.gd" id="2_svpwe"]

[node name="ActionButton" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
script = ExtResource("1_f442w")

[node name="ActionIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_svpwe")
joypad_mode = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
